force-app/main/default/objects/RMS_CFS__c/RMS_CFS__c.object-meta.xml
<CustomObject>
    <label>RMS CFS</label>
    <nameField>
        <label>Store Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RMS CFSS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>