force-app/main/default/objects/RMS_CFS__c/fields/SAP_Ship_To_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Ship_To_Code__c</fullName>
    <label>SAP Ship To Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>