force-app/main/default/objects/RMS_CFS__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>关联Ship-to</description>
    <label>Ship-To</label>
    <referenceTo>RMS_Ship_To__c</referenceTo>
    <relationshipLabel>RMS CFSS</relationshipLabel>
    <relationshipName>RMS_CFSS</relationshipName>
    <type>Lookup</type>
</CustomField>