force-app/main/default/objects/RMS_CFS__c/fields/Sold_To__c.field-meta.xml
<CustomField>
    <fullName>Sold_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>关联Sold-to</description>
    <label>Sold-To</label>
    <referenceTo>RMS_Sold_To__c</referenceTo>
    <relationshipLabel>RMS CFSS</relationshipLabel>
    <relationshipName>RMS_CFSS</relationshipName>
    <type>Lookup</type>
</CustomField>