force-app/main/default/objects/RMS_CFS__c/fields/Sold_To_Code__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Code__c</fullName>
    <label>Sold To Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>