force-app/main/default/objects/RMS_CFS__c/fields/Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Store_Name__c</fullName>
    <label>Store Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>