force-app/main/default/objects/RMS_CFS__c/listViews/RMS_Baoshang_Team_RMS_CFS.listView-meta.xml
<ListView>
    <fullName>RMS_Baoshang_Team_RMS_CFS</fullName>
    <filterScope>Queue</filterScope>
    <label>RMS Baoshang Team</label>
    <queue>RMS_Baoshang_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>